--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,4 +2,5 @@
     <string name="app_name">NewsApp</string>
     <string name="no_items_in_list_error">That\'s funny&#8230; nothing came up</string>
     <string name="image_content_description">Article Image</string>
+    <string name="internet_connection_error">Not connected to the internet,\nplease re-connect and try again</string>
 </resources>
